--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10957,15 +10957,6 @@ nav ul li a:hover {
   text-decoration: none;
 }
 
-nav label.logo {
-  color: #fff;
-  font-size: 18px;
-  line-height: 56px;
-  padding: 0 100px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
 nav .checkbtn {
   font-size: 30px;
   color: #fff;
@@ -10981,16 +10972,25 @@ nav #check {
 }
 
 #top-bar {
-  width: 100%;
-  height: 70px;
-  background: #a9a9a9;
+  height: 6em;
+  background: #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
 
+#top-bar div.logo {
+  padding: 0.2em 2em;
+}
+
+#top-bar div.logo img {
+  margin: 1em 3em;
+  width: 8em;
+  height: 5em;
+}
+
 #top-bar .search-bar {
-  width: 100%;
+  width: 80%;
   position: relative;
   display: flex;
   align-items: center;
@@ -11006,7 +11006,7 @@ nav #check {
   margin: 0 20px;
   border-radius: 25px;
   border: none;
-  background: #f1f1f1;
+  background: #fff;
 }
 
 #top-bar .search-bar input:focus {
@@ -11017,6 +11017,7 @@ nav #check {
   position: absolute;
   right: 40px;
   border: none;
+  background: #fff;
 }
 
 #top-bar .search-bar #search-icon:focus {
@@ -11039,7 +11040,7 @@ nav #check {
 }
 
 #top-bar ul li i:hover {
-  color: white;
+  color: #eeabab;
   cursor: pointer;
 }
 
@@ -11123,6 +11124,203 @@ nav #check {
   min-height: 18px;
   max-height: 100%;
   overflow: hidden;
+}
+
+.homepage-hero {
+  position: relative;
+  height: 823px;
+}
+
+.homepage-hero .homepage-hero-image {
+  display: block;
+  background-image: url(/images/homepage-hero.jpg?7739b541f0c3e3a50db3f20f32d2495c);
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.homepage-hero .text-left {
+  z-index: 3;
+  position: relative;
+}
+
+.homepage-hero .text-left h1 {
+  position: absolute;
+  color: #fff;
+  top: 3em;
+  left: 2em;
+}
+
+.homepage-hero .text-left a {
+  font-size: 1.5em;
+  position: absolute;
+  top: 8em;
+  left: 3.3em;
+  color: #fff;
+  background: #eeabab;
+  padding: 0.2em 0.3em;
+  border-radius: 0.3em;
+}
+
+.homepage-hero .text-left a:hover {
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+.homepage-hero section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.homepage-hero section::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 80%;
+}
+
+.homepage-hero .demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  transform: translate(0, -50%);
+  transition: opacity 0.3s;
+}
+
+.homepage-hero .demo a:hover {
+  opacity: 0.5;
+}
+
+#section10 a {
+  padding-top: 60px;
+}
+
+#section10 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 30px;
+  height: 50px;
+  margin-left: -15px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+
+#section10 a span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: "";
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: sdb10 2s infinite;
+  animation: sdb10 2s infinite;
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes sdb10 {
+  0% {
+    -webkit-transform: translate(0, 0);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: translate(0, 20px);
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sdb10 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.homepage-featured {
+  height: 100%;
+  position: relative;
+  display: block;
+}
+
+.homepage-featured h1 {
+  font-weight: 300;
+  text-align: center;
+  line-height: 1.3em;
+  letter-spacing: 0.2em;
+  padding: 1.2em 1em;
+}
+
+.homepage-featured .homepage-custom {
+  position: relative;
+  height: 50em;
+}
+
+.homepage-featured .homepage-custom .parallax {
+  background-image: url(/images/women-shopping.jpg?6cd92ee6085589d6f1704024bab41e2d);
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.homepage-featured .homepage-custom .quote-text {
+  position: absolute;
+  color: #fff;
+  text-align: center;
+  top: 7em;
+  right: 1em;
+  font-size: 3em;
+  font-weight: 600;
+  text-align: right;
+}
+
+.homepage-featured .homepage-custom .quote-text #quote {
+  color: #d61f1f;
+  font-size: 1em;
+  padding: 0.1em;
+  line-height: 0.5em;
+}
+
+.homepage-featured .homepage-custom .quote-text #quote-author {
+  font-size: 0.3em;
+  font-weight: 400;
 }
 
 .cards-section {
