--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,8 +9,9 @@
 
 $backgroundColor: #fff;
 $background-darker: #f1f1f1;
+$background-1: #eeabab;
 $liHover: #a9a9a9;
-$text-color: #2d2d2d;;
+$text-color: #2d2d2d;
 $text-color-2: #d61f1f;
 $text-color-3: #303030;
 $border-color: #666;
@@ -71,14 +72,7 @@ nav {
             }
         }
     }
-    label.logo {
-        color: $backgroundColor;
-        font-size: 18px;
-        line-height: 56px;
-        padding: 0 100px;
-        font-weight: bold;
-        cursor: pointer;
-    }
+
     .checkbtn {
         font-size: 30px;
         color: $backgroundColor;
@@ -94,20 +88,27 @@ nav {
 }
 
 // top bar
-
 #top-bar {
-    width: 100%;
-    height: 70px;
-    background: $liHover;
+    height: 6em;
+    background: $background-darker;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    div.logo {
+        padding: 0.2em 2em;
+        img {
+            margin: 1em 3em;
+            width: 8em;
+            height: 5em;
+        }
+    }
     .search-bar {
-        width: 100%;
+        width: 80%;
         position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
+
         input {
             font-size: 1rem;
             min-width: 340px;
@@ -117,7 +118,7 @@ nav {
             margin: 0 20px;
             border-radius: 25px;
             border: none;
-            background: $background-darker;
+            background: $backgroundColor;
             &:focus {
                 outline: 0;
             }
@@ -126,6 +127,7 @@ nav {
             position: absolute;
             right: 40px;
             border: none;
+            background: $backgroundColor;
             &:focus {
                 outline: 0;
             }
@@ -143,8 +145,8 @@ nav {
             flex-wrap: nowrap;
             line-height: 50px;
             i:hover {
-                color: white;
-            cursor: pointer;
+                color: $background-1;
+                cursor: pointer;
             }
         }
     }
@@ -159,7 +161,7 @@ nav {
         list-style-type: none;
         width: 100%;
         display: grid;
-        gap: .3em;
+        gap: 0.3em;
         grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
         grid-template-rows: auto;
         align-content: center;
@@ -222,6 +224,182 @@ nav {
                     max-height: 100%;
                     overflow: hidden;
                 }
+            }
+        }
+    }
+}
+
+// homepage hero section
+
+.homepage-hero {
+    position: relative;
+    height: 823px;
+    .homepage-hero-image {
+        display: block;
+        background-image: url("../data/img/homepage-hero.jpg");
+        background-size: cover;
+        background-position: center center;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .text-left {
+        z-index: 3;
+        position: relative;
+        h1 {
+            position: absolute;
+            color: $backgroundColor;
+            top: 3em;
+            left: 2em;
+        }
+        a {
+            font-size: 1.5em;
+            position: absolute;
+            top: 8em;
+            left: 3.3em;
+            color: $backgroundColor;
+            background: $background-1;
+            padding: 0.2em 0.3em;
+            border-radius: 0.3em;
+            &:hover {
+                opacity: 0.7;
+                text-decoration: none;
+            }
+        }
+    }
+    section {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+    section::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 80%;
+    }
+    .demo a {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        z-index: 2;
+        display: inline-block;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        transition: opacity 0.3s;
+    }
+    .demo a:hover {
+        opacity: 0.5;
+    }
+}
+#section10 a {
+    padding-top: 60px;
+    span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 30px;
+        height: 50px;
+        margin-left: -15px;
+        border: 2px solid #fff;
+        border-radius: 50px;
+        box-sizing: border-box;
+        &::before {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            content: "";
+            width: 6px;
+            height: 6px;
+            margin-left: -3px;
+            background-color: #fff;
+            border-radius: 100%;
+            -webkit-animation: sdb10 2s infinite;
+            animation: sdb10 2s infinite;
+            box-sizing: border-box;
+        }
+    }
+}
+
+@-webkit-keyframes sdb10 {
+    0% {
+        -webkit-transform: translate(0, 0);
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        -webkit-transform: translate(0, 20px);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes sdb10 {
+    0% {
+        transform: translate(0, 0);
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        transform: translate(0, 20px);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.homepage-featured {
+    height: 100%;
+    position: relative;
+    display: block;
+    h1 {
+        font-weight: 300;
+        text-align: center;
+        line-height: 1.3em;
+        letter-spacing: 0.2em;
+        padding: 1.2em 1em;
+    }
+    .homepage-custom {
+        position: relative;
+        height: 50em;
+        .parallax {
+            background-image: url("../data/img/women-shopping.jpg");
+            height: 100%;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .quote-text {
+            position: absolute;
+            color: $backgroundColor;
+            text-align: center;
+            top: 7em;
+            right: 1em;
+            font-size: 3em;
+            font-weight: 600;
+            text-align: right;
+
+            #quote {
+                color: $text-color-2;
+                font-size: 1em;
+                padding: 0.1em;
+                line-height: 0.5em;
+            }
+            #quote-author {
+                font-size: 0.3em;
+                font-weight: 400;
             }
         }
     }
